implement get channel
